appId: com.example.templates.stg
---
- tapOn: "Menu"
- tapOn: "Logout"
- tapOn: "Yes"